# BirdGate

./: README.md  __init__.py  birdnet_client.py  config.py  config.yaml  features.py  gate.py  inspect_logs.py  jsonl_log.py  pipeline.py  pyproject.toml  rtsp_reader.py  run_birdgate.py  sqlite_log.py
mnt/user-data/outputs/birdgate/birdgate/analysis/: __init__.py
mnt/user-data/outputs/birdgate/birdgate/ingest/: __init__.py
mnt/user-data/outputs/birdgate/birdgate/routing/: __init__.py
mnt/user-data/outputs/birdgate/birdgate/scripts/: __init__.py
mnt/user-data/outputs/birdgate/birdgate/storage/: __init__.py
